ilk kısım bitti

--- a/landingpage/style.css
+++ b/landingpage/style.css
@@ -43,4 +43,73 @@ header a:nth-child(2) {
 header .logo {
   color: white;
   font-size: 25px;
+}
+
+.body {
+  margin-top: 77px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 77px;
+  justify-content: space-around;
+  display: flex;
+}
+.body .left {
+  margin-left: 100px;
+  margin-bottom: 104px;
+  margin-top: 94px;
+  margin-right: 115px;
+  display: flex;
+  flex-direction: column;
+}
+.body .left h1 {
+  font-size: 75px;
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  line-height: 90px;
+}
+.body .left p {
+  margin-top: 60px;
+  font-size: 18px;
+  color: gray;
+  width: 461px;
+  height: 64px;
+}
+.body .left button {
+  border-radius: 15px;
+  border: 2px solid;
+  border-color: #F8D57E;
+  text-decoration: none;
+  border-width: 15px;
+  text-decoration: none;
+  background-color: #F8D57E;
+  color: #333333;
+  font-family: "Poppins", sans-serif;
+  width: 175px;
+  font-size: 18px;
+}
+.body .right {
+  width: 500px;
+  height: 446px;
+  margin-right: 100px;
+  border: 1px;
+  background-color: #333333;
+  margin-top: 100px;
+}
+
+.hr1 {
+  margin-left: 100px;
+  margin-right: 100px;
+  opacity: 20%;
+}
+
+.img {
+  margin-left: 100px;
+  margin-top: 40px;
+}
+
+.hr2 {
+  margin-left: 100px;
+  margin-right: 100px;
+  opacity: 20%;
+  margin-top: 40px;
 }/*# sourceMappingURL=style.css.map */
