--- a/landingpage/style.scss
+++ b/landingpage/style.scss
@@ -139,7 +139,16 @@ header{
     margin-top: 40px;
 
 }
-
+.img2{
+  margin-left: 150px;
+  background-color: wheat;
+  width: 1080px;
+  height: 500px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  
+ 
+}
 
 
 
